syntax = "proto2";

package MarkovChannel;

message ProtocolParameter {
  required string name = 1;
  optional string source = 2;
  optional double v0 = 3 [default = -120];
  optional double temperature = 4 [default = 293.0];
  repeated ProtocolStep step = 5;
}

message ProtocolStep {
  optional double dt = 1;
  optional double vm = 2;

  optional bool conductance = 3;
  optional bool fluorimetry = 4;

  enum StepType {
    NONE = 0;
    PEAK = 1;
    TAU = 2;
    TRACE = 3;
  }

  optional StepType stype = 5 [default = NONE];
  optional bool normalize = 6 [default = true];
  optional double prm1 = 7 [default = 0.1];
  optional double prm2 = 8 [default = 0.9];
  optional double stepsize = 9 [default = 0.1];
}

message SolverParameter {
  enum SolverMode {
    GENETIC_ALGORITHM = 0;
    SIMULATED_ANNEALING = 1;
  }
  enum SimulationMode {
    ODE = 0;
    EXPM = 1;
  }

  optional SolverMode solver_mode = 1 [default = GENETIC_ALGORITHM];
  optional SimulationMode simulation_mode = 2 [default = ODE];

  required ModelParameter model_param = 3;

  optional int32 max_iters = 4 [default = 10000];
  optional GAParameter ga_param = 5;
  optional SAParameter sa_param = 6;

  optional string protocols = 7;
}

message ModelParameter {
  optional int32 min_states = 1 [default=3];
  optional int32 max_states = 2 [default=10];
  optional int32 n_prms = 3 [default=2];

  optional double mu = 4 [default = 0.0];
  optional double std = 5 [default = 1.0];

  required MutationParameter mutation = 6;
}

message MutationParameter {
  optional double add_edge = 1;
  optional double add_node = 2;
  optional double rm_edge = 3;
  optional double rm_node = 4;

  optional double update_std = 5 [default = 0.1];
  optional double update_prob = 6 [default = 0.2];
}

message GAParameter {
  enum SelectionMode {
    TOURNAMENT = 0;
    PROPORTIONATE = 1;
    STOCHASTIC = 2;
    UNIFORM = 3;
    ROULETTE = 4;
    RANK = 5;
  }
  optional int32 n_subpopulations = 1 [default = 8];
  optional int32 population_size = 2 [default = 100];
  optional double migration_rate = 3 [default = 0.01];
  optional double reproduction_rate = 4 [default = .5];
  optional SelectionMode selection_mode = 5 [default=TOURNAMENT];
  optional TransitionParameter mutation_param = 6;
}

message SAParameter {
  optional int32 k_max = 1 [default = 100];
  optional double gamma = 2 [default = 0.01];
  optional TransitionParameter transition_param = 3;
}

message TransitionParameter {
  optional double add_state = 1;
  optional double add_edge = 2;
  optional double remove_edge = 3;
  optional double shift_params = 4;
  optional bool fixed_model = 5 [default = false];
}
